--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,9 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
+    .navbar.navbar-inverse.navbar-fixed-top{ role: 'navigation' }
+      .container
+        .navbar-header
+          %a.navbar-brand{ href: root_path } NERD Foosball
+        = yield :navbar
     = yield
