--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,13 +2,13 @@
 %html
   %head
     %title NERD Foosball League
+    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    .navbar.navbar-inverse.navbar-fixed-top{ role: 'navigation' }
-      .container
-        .navbar-header
-          %a.navbar-brand{ href: root_path } NERD Foosball
-        = yield :navbar
-    = yield
+    .navbar.navbar-inverse.navbar-static-top{ role: 'navigation' }
+      .container= render 'layouts/navbar'
+    .container
+      = render 'layouts/flash_messages'
+      = yield
