--- a/app/views/layouts/_flash_messages.html.haml
+++ b/app/views/layouts/_flash_messages.html.haml
@@ -1,4 +1,4 @@
 - flash.each do |type, message|
-  .alert.fade-in{ class: bootstrap_class_for(type) }
+  .alert.fade.in{ class: bootstrap_class_for(type) }
     %button.close{ data: { dismiss: 'alert' }} ×
     = message
