--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,4 +9,16 @@
   %ul.nav.navbar-nav
     = nav_link('Rankings', root_path)
     = nav_link('Play', new_game_path)
-    = nav_link('History', root_path)
+    = nav_link('History', games_path)
+  %ul.nav.navbar-nav.navbar-right
+    - if user_signed_in?
+      %li.dropdown
+        %a.dropdown-toggle{ href: '#', data: { toggle: :dropdown } }
+          = "Welcome, #{current_user.name}"
+          %span.caret
+        %ul.dropdown-menu{ role: :menu }
+          %li= link_to 'Profile', '#'
+          %li= link_to 'Settings', edit_user_registration_path
+          %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
+    - else
+      = nav_link('Sign In', new_user_session_path)
