--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -20,5 +20,8 @@
           %li= link_to 'Profile', '#'
           %li= link_to 'Settings', edit_user_registration_path
           %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
-    - else
-      = nav_link('Sign In', new_user_session_path)
+    - elsif !devise_controller?
+      = simple_form_for(:user, url: session_path(:user), html: { class: 'navbar-form' }) do |f|
+        = f.input :email, label: false, placeholder: 'Email'
+        = f.input :password, label: false, placeholder: 'Password'
+        = f.button :submit, 'Sign In'
