--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,16 +1,19 @@
 %h1 Game History
 
-%table.table.table-striped.table-hover
-  %thead
-    %tr
-      %th Team 1
-      %th Team 2
-      %th Score
-      %th Played at
+.table-container
+  %table.table.table-striped.table-hover
+    %thead
+      %tr
+        %th Team 1
+        %th Team 2
+        %th Score
+        %th Played at
 
-  - @games.each do |game|
-    %tr
-      - game.teams.each do |team|
-        %td= "#{team.users.first.name} & #{team.users.second.name}"
-      %td= "#{game.teams.first.goals} to #{game.teams.second.goals}"
-      %td= game.created_at.strftime('%m/%d %I:%M %P')
+    - @games.each do |game|
+      %tr
+        - game.teams.each do |team|
+          %td= "#{team.users.first.name} & #{team.users.second.name}"
+        %td= "#{game.teams.first.goals} to #{game.teams.second.goals}"
+        %td= game.created_at.strftime('%m/%d %I:%M %P')
+
+  = paginate @games
