--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -4,7 +4,7 @@
   .form-inputs.row
     = f.simple_fields_for :teams do |team_form|
       .col-md-6
-        .panel.panel-primary
+        .panel.panel-default
           .panel-heading
             %h3.panel-title= "Team #{team_form.index.succ}"
           .panel-body
