Add ranking code

--- a/app/views/rankings/index.html.haml
+++ b/app/views/rankings/index.html.haml
@@ -12,6 +12,6 @@
     %tr
       %td= i.succ
       %td= link_to user.name, '#'
-      %td= user.rating
-      %td= user.wins
-      %td= user.losses
+      %td= user.rank
+      %td= user.win_count
+      %td= user.loss_count
