--- a/app/views/games/edit.html.haml
+++ b/app/views/games/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing game
+%h2 Editing game
 
 = render 'form'
 
-= link_to 'Show', @game
-\|
-= link_to 'Back', games_path
+= link_to 'Back', game_path(@game)
