--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,9 +1,35 @@
-%p#notice= notice
+%h2
+  Game Details
+  %br
+  %small
+    Recorded #{@game.pretty_date} by
 
-%p
-  %b Rating pending:
-  = @game.rating_pending
+%hr
 
-= link_to 'Edit', edit_game_path(@game)
-\|
+.row
+  - @game.teams.each do |team|
+    .col-md-6
+      .panel.panel-default
+        .panel-body
+          %h1
+            = team.goals
+            %small= 'goal'.pluralize(team.goals)
+          %hr
+          - team.players.each do |player|
+            .row
+              .col-xs-6
+                %h3
+                  = player.name
+                  %small= player.position.capitalize
+              .col-xs-6.text-right
+                %h3
+                  = player.rank
+                  %small (#{'%+d' % player.rank_delta})
+
+.buttons
+  = link_to 'Edit Game', edit_game_path(@game), class: ['btn', 'btn-primary']
+  = link_to 'Delete Game', game_path(@game),
+      data: { confirm: 'Are you sure?' },
+      method: :delete,
+      class: ['btn', 'btn-danger']
 = link_to 'Back', games_path
