--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,7 +17,7 @@
           = "Welcome, #{current_user.name}"
           %span.caret
         %ul.dropdown-menu{ role: :menu }
-          %li= link_to 'Profile', '#'
+          %li= link_to 'Profile', user_path(current_user)
           %li= link_to 'Settings', edit_user_registration_path
           %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
     - elsif !devise_controller?
