--- a/app/views/rankings/index.html.haml
+++ b/app/views/rankings/index.html.haml
@@ -11,7 +11,7 @@
   - @users.each_with_index do |user, i|
     %tr
       %td= i.succ
-      %td= link_to user.name, '#'
+      %td= link_to user.name, user_path(user)
       %td= user.rank
       %td= user.win_count
       %td= user.loss_count
