Add bootswatch theme.

--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -7,7 +7,7 @@
         %th Team 1
         %th Team 2
         %th Score
-        %th Played at
+        %th When
         %th Actions
 
     - @games.each do |game|
