--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,8 +14,10 @@
  *= require_tree .
  */
 
+@import bootswatch/flatly/variables
 @import bootstrap-sprockets
 @import bootstrap
+@import bootswatch/flatly/bootswatch
 
 .alert > ul
     padding-left: 20px
