--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -10,7 +10,7 @@
 .row
   - @game.teams.each do |team|
     .col-md-6
-      .panel.panel-default
+      .panel.panel-primary
         .panel-body
           %h1
             = team.goals
