--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -17,8 +17,8 @@
           = "Welcome, #{current_user.name}"
           %span.caret
         %ul.dropdown-menu{ role: :menu }
-          %li= link_to 'Profile', user_path(current_user)
-          %li= link_to 'Settings', edit_user_registration_path
+          = nav_link 'Profile', user_path(current_user)
+          = nav_link 'Settings', edit_user_registration_path
           %li= link_to 'Sign Out', destroy_user_session_path, method: :delete
     - elsif !devise_controller?
       = simple_form_for(:user, url: session_path(:user), html: { class: 'navbar-form' }) do |f|
