Add sticky footer with copyright

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,3 +13,4 @@
       .sub-container{ class: (sub_container_classes if defined?(sub_container_classes)) }
         = render 'layouts/flash_messages'
         = yield
+    = render 'layouts/footer'
