--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,4 +20,22 @@
 @import bootswatch/flatly/bootswatch
 
 .alert > ul
-    padding-left: 20px
+  padding-left: 20px
+
+html
+  position: relative
+  min-height: 100%
+
+body
+  margin-bottom: 60px
+
+.footer
+  position: absolute
+  bottom: 0
+  width: 100%
+  height: 60px
+  background-color: #2c3e50
+
+  .text-muted
+    margin: 20px 0
+    line-height: 20px
